Figuring out an issue with terminal input on mobile web, going to disable it for small screens for now

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,3 +48,9 @@ ul {
 #term a {
   color: #fff;
 }
+
+@media only screen and (max-width: 1000px) {
+  #term {
+    display: none;
+  }
+}
